# petrel

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DOCKERFILE  Dockerfile  LICENSE  README.md  codex_cli.py  pyproject.toml
.github/: container-publish.yml
.github/workflows/: container_publish.yml  test.yml
src/petrel/: Dockerfile.j2  __init__.py  main.py
tests/: conftest.py  test_main.py
